rubberbanding on, fix jump caused by resetting scroll position on page change

--- a/client/styles/layout.scss
+++ b/client/styles/layout.scss
@@ -4,11 +4,7 @@
     box-sizing: border-box;
 }
 html, body {
-    position: fixed;
-    height: 100%;
-    overflow: hidden;
     box-sizing: border-box;
-    width: 100%;
 }
 html {
     font-family: $fonts;
